baml_language/crates/baml_tests/snapshots/diagnostic_errors/patterns_array_rest_binding/baml_tests__diagnostic_errors__patterns_array_rest_binding__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 51952
---
=== HIR2 ===
class user.Wrapper {
  value: int
}
function user.nested_bare_rest(xs: int[]) -> int  [expr] {
  {  } match (xs) { [..[..]] => 1, _ => 0 }
}
function user.nested_rest_binding(xs: int[]) -> int  [expr] {
  {  } match (xs) { [..[..r]] => r.length(), _ => 0 }
}
function user.rest_class_destructure(ws: user.Wrapper[]) -> int  [expr] {
  {  } match (ws) { [..Wrapper { value: value }] => value, _ => 0 }
}
function user.rest_empty_array(xs: int[]) -> int  [expr] {
  {  } match (xs) { [a, ..[]] => a, _ => 0 }
}
function user.rest_flattening_showcase(xs: int[]) -> int  [expr] {
  {  } match (xs) { [a, ..[b, ..r, c], d] => a Add b Add c Add d, _ => 0 }
}
function user.rest_type_pattern(xs: int[]) -> int  [expr] {
  {  } match (xs) { [a, ..int] => a, _ => 0 }
}
function user.valid_ascribed_rest() -> int  [expr] {
  { let [..rest: int[]] = [1, 2]; return rest[0] }
}
function user.valid_rest_binding(xs: int[]) -> int  [expr] {
  {  } match (xs) { [first, ..rest, last] => first Add rest.length() Add last, [..all] => all.length() }
}
function user.valid_wildcard_rest(xs: int[]) -> int  [expr] {
  {  } match (xs) { [first, .._] => first, _ => 0 }
}
