baml_language/crates/baml_tests/snapshots/diagnostic_errors/patterns_array_rest_binding/baml_tests__diagnostic_errors__patterns_array_rest_binding__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 51976
---
=== TIR2 ===
function user.valid_rest_binding(xs: int[]) -> int throws never {
  { : int
    match (xs : int[]) : int
      [first, ..rest, last] =>
        first + rest.length() + last : int
      [..all] =>
        all.length() : int
  }
}
function user.valid_wildcard_rest(xs: int[]) -> int throws never {
  { : int | 0
    match (xs : int[]) : int | 0
      [first, .._] =>
        first : int
      _ =>
        0 : 0
  }
}
function user.valid_ascribed_rest() -> int throws never {
  { : never
    let [..rest: int[]] = [1, 2] : int[]
    return rest[0] : int
  }
}
function user.nested_bare_rest(xs: int[]) -> int throws never {
  { : 1 | 0
    match (xs : int[]) : 1 | 0
      [..[..]] =>
        1 : 1
      _ =>
        0 : 0
  }
  !! 1330..1334: rest pattern `..` can only carry a binding; write `..let name` or `..let name: T[]`
}
function user.nested_rest_binding(xs: int[]) -> int throws never {
  { : unknown | 0
    match (xs : int[]) : unknown | 0
      [..[..r]] =>
        r.length() : unknown
      _ =>
        0 : 0
  }
  !! 1521..1530: rest pattern `..` can only carry a binding; write `..let name` or `..let name: T[]`
}
function user.rest_empty_array(xs: int[]) -> int throws never {
  { : int | 0
    match (xs : int[]) : int | 0
      [a, ..[]] =>
        a : int
      _ =>
        0 : 0
  }
  !! 1714..1716: rest pattern `..` can only carry a binding; write `..let name` or `..let name: T[]`
}
function user.rest_flattening_showcase(xs: int[]) -> int throws never {
  { : unknown | 0
    match (xs : int[]) : unknown | 0
      [a, ..[b, ..r, c], d] =>
        a + b + c + d : unknown
      _ =>
        0 : 0
  }
  !! 1874..1897: rest pattern `..` can only carry a binding; write `..let name` or `..let name: T[]`
}
class user.Wrapper {
  value: int
}
function user.rest_type_pattern(xs: int[]) -> int throws never {
  { : int | 0
    match (xs : int[]) : int | 0
      [a, ..int] =>
        a : int
      _ =>
        0 : 0
  }
  !! 2358..2361: rest pattern `..` can only carry a binding; write `..let name` or `..let name: T[]`
}
function user.rest_class_destructure(ws: user.Wrapper[]) -> int throws never {
  { : unknown | 0
    match (ws : user.Wrapper[]) : unknown | 0
      [..Wrapper { value: value }] =>
        value : unknown
      _ =>
        0 : 0
  }
  !! 2477..2494: rest pattern `..` can only carry a binding; write `..let name` or `..let name: T[]`
}
class user.Wrapper$stream {
  value: int | null
}
